# teapot

./: .gitignore  .gitmodules  Dockerfile  config.py  docker-compose.yml  main.py  node_config  pyproject.toml
.github/workflows/: cd.yml
modules/nomadapi/: .gitignore  __init__.py  app.py  context.py
modules/nomadapi/handlers/: exception_handler.py  handler.py  request.py  response.py
pages/: browser.mu  index.mu  links.mu
